[package]
name = "reth-anal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
futures-util = "0.3.30"
tracing = "0.1.40"
tokio = { version = "1.21", features = ["full"] }
jsonrpsee = { version = "0.22", features = ["server", "macros"] }
jsonrpsee-core = { version = "0.22" }
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.80"

reth = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b73be382caf2a2462d426e6bad75e18af9" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b73be382caf2a2462d426e6bad75e18af9" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b73be382caf2a2462d426e6bad75e18af9" }
